--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="utf-8">
     <title>WebDict</title>
-    <!--<base href="/">-->
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="./">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="styles.24b2076f6a049bffc71b.bundle.css" rel="stylesheet"/>
 </head>
 <body>
 <app-root></app-root>
-<script type="text/javascript" src="inline.bundle.js"></script>
-<script type="text/javascript" src="polyfills.bundle.js"></script>
-<script type="text/javascript" src="styles.bundle.js"></script>
-<script type="text/javascript" src="scripts.bundle.js"></script>
-<script type="text/javascript" src="vendor.bundle.js"></script>
-<script type="text/javascript" src="main.bundle.js"></script>
+<script type="text/javascript" src="inline.318b50c57b4eba3d437b.bundle.js"></script>
+<script type="text/javascript" src="polyfills.2847246b0d2ddb2dda6d.bundle.js"></script>
+<script type="text/javascript" src="scripts.e2cc764d74d6cb8d1c42.bundle.js"></script>
+<script type="text/javascript" src="main.e5edf1bf96812f6e1d6f.bundle.js"></script>
 </body>
 </html>
