Redirecting API urls to application context root
rebuild frontend

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,1 +1,21 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>WebDict</title><base href="./"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.24b2076f6a049bffc71b.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.318b50c57b4eba3d437b.bundle.js"></script><script type="text/javascript" src="polyfills.2847246b0d2ddb2dda6d.bundle.js"></script><script type="text/javascript" src="scripts.e2cc764d74d6cb8d1c42.bundle.js"></script><script type="text/javascript" src="main.bc078583b4a5cd30a92a.bundle.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>WebDict</title>
+    <base href="/webdict-test/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="/webdict-test/styles.e020b50e581f16b6747b.css">
+</head>
+<body>
+<app-root></app-root>
+
+
+<script type="text/javascript" src="/webdict-test/runtime.4efeb38b55de1b5a4e54.js"></script>
+<script type="text/javascript" src="/webdict-test/polyfills.123219f87314d0291118.js"></script>
+<script type="text/javascript" src="/webdict-test/scripts.e2cc764d74d6cb8d1c42.js"></script>
+<script type="text/javascript" src="/webdict-test/main.714a8229e2879e997717.js"></script>
+</body>
+</html>
