--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,21 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>WebDict</title>
-    <base href="./">
+<!DOCTYPE html><html lang="en"><head>
+  <meta charset="utf-8">
+  <title>WebDict</title>
+  <base href="/webdict-test/">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="./styles.e020b50e581f16b6747b.css">
-</head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="/webdict-test/styles.e020b50e581f16b6747b.css"></head>
 <body>
 <app-root></app-root>
 
 
-<script type="text/javascript" src="./runtime.1c9ec0a530e10cbd3443.js"></script>
-<script type="text/javascript" src="./polyfills.123219f87314d0291118.js"></script>
-<script type="text/javascript" src="./scripts.e2cc764d74d6cb8d1c42.js"></script>
-<script type="text/javascript" src="./main.1d993fabe3406a89e984.js"></script>
-</body>
-</html>
+<script type="text/javascript" src="/webdict-test/runtime.4efeb38b55de1b5a4e54.js"></script><script type="text/javascript" src="/webdict-test/polyfills.123219f87314d0291118.js"></script><script type="text/javascript" src="/webdict-test/scripts.e2cc764d74d6cb8d1c42.js"></script><script type="text/javascript" src="/webdict-test/main.1d993fabe3406a89e984.js"></script></body></html>
